--- a/MANUALHTML/block_getlast.html
+++ b/MANUALHTML/block_getlast.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -139,9 +138,9 @@
 Version : Sun Feb 21 04:35:04 JST 2021
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p><code>key=</code> で指定したフィールドの各レコードのうち、<code>ref=</code> で指定した参照フィールドが同じ値を持つ最終ブロックをすべて出力します。入力データは、<code>key=</code> で指定したフィールドについてソートされていることを前提とします。</p>
-<p><code>key=</code> や<code>ref=</code> には、範囲指定(例<code>1/3 2@5</code>)及び<code>&quot;NF&quot;</code> の使用が可能です。</p>
-<p><code>&lt;file&gt;</code> ファイルの指定が無いとき、あるいはファイル名が<code>&quot;-&quot;</code> の時は、標準入力を読み込みます。</p>
+<p><code>key=</code>で指定したフィールドの各レコードのうち、<code>ref=</code>で指定した参照フィールドが同じ値を持つ最終ブロックをすべて出力します。入力データは、<code>key=</code>で指定したフィールドについてソートされていることを前提とします。</p>
+<p><code>key=</code>や<code>ref=</code>には、範囲指定(例<code>1/3 2@5</code>)及び<code>&quot;NF&quot;</code>の使用が可能です。</p>
+<p><code>&lt;file&gt;</code>ファイルの指定が無いとき、あるいはファイル名が<code>&quot;-&quot;</code>の時は、標準入力を読み込みます。</p>
 <h3>【例１】</h3>
 <p>同じ伝票番号を持つレコードのうち、直近の日付のレコードを出力する。(data のレイアウト)</p>
 <dl class="layout">
