--- a/MANUALHTML/delr.html
+++ b/MANUALHTML/delr.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -140,7 +139,7 @@ Version : Sun Nov 21 17:29:32 JST 2021
           Open usp Tukubai (LINUX+FREEBSD/PYTHON2.4/UTF-8)
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>引数のファイルのテキストデータより、指定したフィールドが指定した文字列と完全一致した行を除いて出力します。ファイル名が省略された時及び<code>&quot;-&quot;</code> の時は標準入力から入力します。</p>
+<p>引数のファイルのテキストデータより、指定したフィールドが指定した文字列と完全一致した行を除いて出力します。ファイル名が省略された時及び<code>&quot;-&quot;</code>の時は標準入力から入力します。</p>
 <h3>【例１】 指定したフィールドが完全一致した行を除いて出力する</h3>
 <pre class="prettyprint">$ cat data
 0001 a
