--- a/MANUALHTML/fromcsv.html
+++ b/MANUALHTML/fromcsv.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -142,17 +141,17 @@ Option  : -n &lt;null_string&gt;
           -q
 Version : Tue Sep 13 17:11:29 JST 2022</pre>
 <h3>【説明】</h3>
-<p>CSVファイルをスペース区切りのファイルに変換します。ファイル名を指定しない時、または<code>'<code>-</code>'</code> の時は標準入力を読み込みます。</p>
+<p>CSVファイルをスペース区切りのファイルに変換します。ファイル名を指定しない時、または<code>'<code>-</code>'</code>の時は標準入力を読み込みます。</p>
 <h3>【仕様】</h3>
 	  <ol>
 <li>空の文字列は0に変換します。</li>
 <li>文字列1の中の &quot;&quot; は &quot; に変換します。</li>
-<li>文字列の中の半角スペースは、_ に変換します。<code>-s</code> オプションで_を別の1バイト文字に変更できます。
+<li>文字列の中の半角スペースは、_ に変換します。<code>-s</code>オプションで_を別の1バイト文字に変更できます。
 </li>
-<li><code>-e</code> オプションを指定すると、_(または<code>-s</code> オプションで指定した文字)\ には \ を前置します。
+<li><code>-e</code>オプションを指定すると、_(または<code>-s</code>オプションで指定した文字)\ には \ を前置します。
 </li>
-<li><code>-q</code> オプションを指定すると、\&quot; は &quot; に、\\ は \ に変換します。</li>
-<li>行末の \r<code>\n</code> は自動的に<code>\n</code> に変換します。</li>
+<li><code>-q</code>オプションを指定すると、\&quot; は &quot; に、\\ は \ に変換します。</li>
+<li>行末の \r<code>\n</code>は自動的に<code>\n</code>に変換します。</li>
 <li>文字列1内の改行は &quot;<code>\n</code>&quot; と変換します。</li>
  <li>最終行は改行が無くても構いません。
 </li>
