--- a/MANUALHTML/itouch.html
+++ b/MANUALHTML/itouch.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -140,7 +139,7 @@
 Version : Thu Aug 20 20:30:32 JST 2015
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>指定ファイルが存在しない、あるいは０バイトならば、<code>&lt;string&gt;</code>あるいは<code>&lt;file&gt;</code> でファイルの中身を初期化します。<code>-&lt;n&gt;</code> で数字を指定すると<code>&lt;n&gt;</code>行分の<code>&lt;string&gt;</code>あるいは<code>&lt;n&gt;</code>回分の<code>&lt;file&gt;</code>で初期化します。初期化するファイルは複数指定できます。ファイルが存在して０バイトで無い場合は何もしません。指定ファイルが<code>&quot;-&quot;</code> のときは、標準入力を期待し、結果を標準出力に出力します。</p>
+<p>指定ファイルが存在しない、あるいは０バイトならば、<code>&lt;string&gt;</code>あるいは<code>&lt;file&gt;</code>でファイルの中身を初期化します。<code>-&lt;n&gt;</code>で数字を指定すると<code>&lt;n&gt;</code>行分の<code>&lt;string&gt;</code>あるいは<code>&lt;n&gt;</code>回分の<code>&lt;file&gt;</code>で初期化します。初期化するファイルは複数指定できます。ファイルが存在して０バイトで無い場合は何もしません。指定ファイルが<code>&quot;-&quot;</code>のときは、標準入力を期待し、結果を標準出力に出力します。</p>
 <h3>【例１】</h3>
 <pre class="prettyprint">$ cat file
 cat: file: No such file or directory  &lt;-- ファイルが存在しないか０バ
