--- a/MANUALHTML/joinx.html
+++ b/MANUALHTML/joinx.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -139,7 +138,7 @@
 Version : Sat Sep 24 08:21:57 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>２つのファイルの各レコードを、総てのパターンの掛け合わせを作り連結して出力します。引数を指定する順番に総掛けされます。つまり、<code>&lt;file1&gt;</code> の各レコードに対し、<code>&lt;file2&gt;</code> のすべてのレコードが順番に総掛けされます</p>
+<p>２つのファイルの各レコードを、総てのパターンの掛け合わせを作り連結して出力します。引数を指定する順番に総掛けされます。つまり、<code>&lt;file1&gt;</code>の各レコードに対し、<code>&lt;file2&gt;</code>のすべてのレコードが順番に総掛けされます</p>
 <h3>【例】</h3>
 <p>(元データ1：data1)</p>
 <pre class="prettyprint">$ cat data1
