--- a/MANUALHTML/maezero.html
+++ b/MANUALHTML/maezero.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -158,7 +157,7 @@ $</pre>
 000012 000345 006789
 $</pre>
 <h3>【例4】</h3>
-<p>フィールド指定に<code>NF</code>や<code>NF</code><code>-&lt;n&gt;</code>を使うことがでる。</p>
+<p>フィールド指定に<code>NF</code>や<code>NF -&lt;n&gt;</code>を使うことがでる。</p>
 <pre class="prettyprint">$ maezero NF-1.6 data
 12 000345 6789
 $</pre>
