--- a/MANUALHTML/map.html
+++ b/MANUALHTML/map.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -295,7 +294,7 @@ X1 1  8  2  7  3  6  4  5
 X2 5  4  6  3  7  2  8  1
 $</pre>
 <h3>【例9】</h3>
-<p><code>-</code><code>&lt;数字&gt;</code>オプションと<code><code>num=&lt;n&gt;</code>x&lt;m&gt;</code>を組み合わせると次のように動作する。</p>
+<p>-&lt;数字&gt;オプションと<code><code>num=&lt;n&gt;</code>x&lt;m&gt;</code>を組み合わせると次のように動作する。</p>
 <pre class="prettyprint">$ cat data3
 X1 Y1 Z1 1 8 4 5 6 7
 X1 Y1 Z2 2 7 4 5 6 7
