--- a/MANUALHTML/cap.html
+++ b/MANUALHTML/cap.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -143,7 +142,7 @@ Edition : 1</pre>
 <p>引数で指定したフィールドの半角英小文字を、すべて半角英大文字に変換して出力する。変換できない文字(日本語、数字、記号、全角文字)は、変換されずにそのまま出力される。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
 <p><code>-d</code>オプションがあると<code>&lt;string&gt;</code>で指定された文字列に対して変換を行なう。</p>
 <h3>【注意】</h3>
-<p> 入力ファイル<code>&lt;file&gt;</code> は省略できない フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code> ... を省略すると全フィールド指定となる。 フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code> ... に0があると全フィールド指定となる。 このとき同時に0以外のフィールド指定があってもそれらは無視される。</p>
+<p> 入力ファイル<code>&lt;file&gt;</code>は省略できない フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code>... を省略すると全フィールド指定となる。 フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code>... に0があると全フィールド指定となる。 このとき同時に0以外のフィールド指定があってもそれらは無視される。</p>
 <h3>【例１】</h3>
 <p>(元データ)</p>
 <pre class="prettyprint">$ cat data
