--- a/MANUALHTML/check_date_name.html
+++ b/MANUALHTML/check_date_name.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -140,9 +139,9 @@ Option  : --through &lt;string&gt;
 Version : Tue Oct 19 23:46:03 JST 2021
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p><code>&lt;check_file&gt;</code> に記述されているタグ名、記号(D/W/M)に従って<code>&lt;name_file&gt;</code> の日/週/月の記述が正しいかどうかチェックします。エラーがあった場合は、コマンドはエラー終了し、標準出力にタグ名と、記号をを出力します。</p>
+<p><code>&lt;check_file&gt;</code>に記述されているタグ名、記号(D/W/M)に従って<code>&lt;name_file&gt;</code>の日/週/月の記述が正しいかどうかチェックします。エラーがあった場合は、コマンドはエラー終了し、標準出力にタグ名と、記号をを出力します。</p>
 <h4>オプション</h4>
-<p><code>--through &lt;string&gt;</code><code>&lt;check_file&gt;</code>と<code>&lt;name_file&gt;</code> のデータが<code>&lt;string&gt;</code>で指定した文字列に等しい場合は、チェックを実施しません。<code>&lt;string&gt;</code>のデフォルトは、<code>&quot;_&quot;</code> となります。こ<code>の</code>オプションは繰り返し使って複数の<code>&lt;string&gt;</code>を指定できます。</p>
+<p><code>--through &lt;string&gt; &lt;check_file&gt;</code>と<code>&lt;name_file&gt;</code>のデータが<code>&lt;string&gt;</code>で指定した文字列に等しい場合は、チェックを実施しません。<code>&lt;string&gt;</code>のデフォルトは、<code>&quot;_&quot;</code>となります。このオプションは繰り返し使って複数の<code>&lt;string&gt;</code>を指定できます。</p>
 <h3>【例１】 通常のチェック</h3>
 <pre class="prettyprint">[usp1 usp@ ~]$ cat check
 A D    &lt;-- 日付
