--- a/MANUALHTML/cjoin0.html
+++ b/MANUALHTML/cjoin0.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -144,7 +143,7 @@ Edition : 1</pre>
 <p>masterの第1フィールドとtranの第<code>&lt;n&gt;</code>フィールドは整列されていなくてもよく、キーフィールドに同じ値を持つレコードはいくつあっても構わない。</p>
 <p>キーに選択するフィールドは複数指定することもできる。たとえば<code>key=3/5</code>のように指定した場合、tranの第3、第4、第5フィールドを意味するようになる。またこの場合、masterのキーは第1、第2、第3フィールドとなる。<code>key=3@5</code>とすると第3、第5フィールドを意味する。行のフィールド数を意味する<code>NF</code>を使用して<code>NF</code>または<code>NF-x</code>の形でフィールド位置を指定することができる</p>
 <p>キー指定にひとつでも0があると全フィールドを指定したことになる</p>
-<p><code>+ng</code> オプションをつけると、一致した行を標準出力ファイルへ、一致しなかった行をファイルデスクリプタ<code>&lt;fd&gt;</code>のファイルへ出力する。<code>&lt;fd&gt;</code>を省略した場合は標準エラー出力ファイルへ出力する。</p>
+<p><code>+ng</code>オプションをつけると、一致した行を標準出力ファイルへ、一致しなかった行をファイルデスクリプタ<code>&lt;fd&gt;</code>のファイルへ出力する。<code>&lt;fd&gt;</code>を省略した場合は標準エラー出力ファイルへ出力する。</p>
 <p><code>tran</code>のキーが整列済みであれば<a href="cjoin0.html" class="command">cjoin0(1)</a>ではなく<a href="join0.html" class="command">join0(1)</a>で処理できる。<a href="cjoin0.html" class="command">cjoin0(1)</a>はtranのキーが整列されていないものも処理できるが、masterをすべてメモリに読み込むため、メモリ確保エラーが発生する可能性がある。<a href="cjoin0.html" class="command">cjoin0(1)</a>はmasterが小さくtranが大容量な場合に効果的に使用できる。</p>
 <h3>【例1】基本パターン</h3>
 <p>成績ファイルkekkaからmasterに登録されている4人のデータを抽出する。</p>
