--- a/MANUALHTML/delf.html
+++ b/MANUALHTML/delf.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -142,7 +141,7 @@ Edition : 1</pre>
 <h3>【説明】</h3>
 <p><code>file</code>から、指定したフィールドだけを除いて出力する(delf=delete field)。<a href="self.html" class="command">self(1)</a>とは逆の動作となる。ファイル名指定なし、あるいは、ファイル名が-の時は標準入力を期待する。</p>
 <h3>【オプション】</h3>
-<p><code>-d</code> : ダイレクトモード文字列<code>&lt;string&gt;</code>に<code>delf</code> を適用する。</p>
+<p><code>-d</code>: ダイレクトモード文字列<code>&lt;string&gt;</code>に<code>delf</code>を適用する。</p>
 <h3>【例1】</h3>
 <pre class="prettyprint">$ cat data              ←元データ
 0000000 浜地______ 50 F
