--- a/MANUALHTML/extname.html
+++ b/MANUALHTML/extname.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -139,7 +138,7 @@
 Version : Fri Oct 21 11:26:06 JST 2011
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p><code>extname</code> コマンドは指定した<code>&lt;pathname&gt;</code> からサフィックスを出力します。</p>
+<p><code>extname</code>コマンドは指定した<code>&lt;pathname&gt;</code>からサフィックスを出力します。</p>
 <h3>【例１】</h3>
 <pre class="prettyprint">$ extname /home/usp/hogehoge.c
 c</pre>
