--- a/MANUALHTML/field-format.html
+++ b/MANUALHTML/field-format.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>フィールド形式(5) - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>field-format - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,7 +21,7 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
@@ -57,6 +56,8 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
+              <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
@@ -70,6 +71,7 @@
               <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
               <li><a href="join2x.html">join2x(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
@@ -99,6 +101,7 @@
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="tocsv.html">tocsv(1)</a></li>
               <li><a href="uconv.html">uconv(1)</a></li>
               <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
@@ -109,16 +112,15 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+                            <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -128,57 +130,3 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>フィールド形式(5)</h2>
-
-      <h3>【名前】</h3>
-
-      <p>フィールド形式 : 空白区切りのテキストデータ形式</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">第1フィールド 第2フィールド 第3フィールド ...
-...</pre>
-
-      <h3>【説明】</h3>
-
-      <p>1つの空白文字を区切り文字としたテキストデータ形式。フィールド形式では行をレコード、1行あたりのそれぞれ空白で区切られたものをフィールドと呼んでいる。行頭から順に第1フィールド、第2フィールド、第3フィールド...と呼ばれる。</p>
-
-      <p>フィールド形式ではすべての行のフィールド数は同一である必要がある。フィールド形式は<a href="https://uec.usp-lab.com/TUKUBAI/CGI/TUKUBAI.CGI?POMPA=ABOUT">Open usp Tukubai</a>や<a href="https://www.usp-lab.com/DOWNLOAD/PDF/PRODUCT_uspTukubai.pdf">usp Tukubai</a>における基本データ形式であり、<a href="tag-format.html">タグ形式(5)</a>や<a href="name-format.html">ネーム形式(5)</a>はフィールド形式の一種となる。</p>
-
-      <p>マスタの特性を満たした<a href="master-file.html">マスタファイル</a>やトランザクションの特性を満たした<a href="transaction-file.html">トランザクションファイル</a>もフィールド形式のファイルとなる。</p>
-
-      <h3>【例1】</h3>
-
-      <p>フィールド形式のファイル例は次のとおり。</p>
-
-      <pre class="prettyprint linenums">0001 20111008 23 F 0.845814
-0002 20111009 15 M 0.193475
-0003 20111010 81 F 0.484983
-0004 20111011 15 F 0.491736
-0005 20111012 91 F 0.893188
-0006 20111013 22 M 0.571077
-0007 20111014 33 F 0.502931
-0008 20111015 56 M 0.0401409
-0009 20111016 10 M 0.013111
-0010 20111017 72 F 0.482945</pre>
-
-      <p>フィールド形式ではすべての行のフィールド数が同一である必要がある点に注意が必要。<a href="https://www.usp-lab.com/methodology.html">ユニケージ開発手法</a>のコマンド実装系である<a href="https://uec.usp-lab.com/TUKUBAI/CGI/TUKUBAI.CGI?POMPA=ABOUT">Open usp Tukubai</a>や<a href="https://www.usp-lab.com/DOWNLOAD/PDF/PRODUCT_uspTukubai.pdf">usp Tukubai</a>は行ごとのフィールド数が異なるフィールド形式のファイルは動作を保証しない。</p>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="tag-format.html">タグ形式(5)</a>、<a href="name-format.html">ネーム形式(5)</a>、<a href="master-file.html">マスタファイル(5)</a>、<a href="name-file.html">ネームファイル(5)</a>、<a href="transaction-file.html">トランザクションファイル(5)</a></p>
-
-      <p class="annotation">※ ユニケージ</a>は<a href="https://www.usp-lab.com/">ユニバーサル・シェル・プログラミング研究所</a>の登録商標。</p>
-
-      <p class="annotation">※ <a href="https://www.usp-lab.com/product.html">usp Tukubai</a>は<a href="https://www.usp-lab.com/">ユニバーサル・シェル・プログラミング研究所</a>の登録商標。</p>
-
-      <p class="annotation">※ 2012年7月から始まる教育講座に合わせて、従来の「ユニケージ」または「ユニケージ方法論」は「<a href="https://www.usp-lab.com/methodology.html">ユニケージ開発手法</a>」へ名称を統一。</p>
-
-    </div>
-
-    <div id="lastmodified">Last modified: Mon Aug  8 11:12:22 JST 2022</div>
-
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
-  </div>
-</body>
-</html>
