--- a/MANUALHTML/formhame.html
+++ b/MANUALHTML/formhame.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -205,7 +204,7 @@ $</pre>
 </li>
 <li><code>-i</code>オプションと<code>-d</code>オプションの両方が指定された場合、<code>-i</code>オプションによる処理を先に行なう。</li>
 <li>HTMLは正しく記述されている必要がある。タグは<code>&lt;タグ /&gt;</code>あるいは、<code>&lt;タグ&gt;</code><code>&lt;/タグ&gt;</code>と記述される必要がある。変数は必ず<code>&quot; &quot;</code>で囲まれている必要がある(<code>value=&quot;1&quot;</code>など)。
-<code>input type=&quot;checkbox&quot;</code>のときは、<code>必ずvalue=&quot;XXX&quot;</code>が指
+<code>input type=&quot;checkbox&quot;</code>のときは、必ず<code>value=&quot;XXX&quot;</code>が指
 定されている必要がある。
 </li>
  <li><code class="multiline">checkbox</code>、<code class="multiline">radiobox</code>、<code class="multiline">selectbox</code>の複数選択の場合は、ネーム形式データ(5)は次のように1つのタグに対して複行となる。
