--- a/MANUALHTML/getfirst.html
+++ b/MANUALHTML/getfirst.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -181,7 +180,7 @@ $ cat data2
 0000030 じゃが芋 20060203 184
 $</pre>
 <h3>【例3】</h3>
-<p><code>+ng</code> オプションに<code>&lt;fd&gt;</code>を指定すると、標準エラー出力のかわりに<code>&lt;fd&gt;</code>への出力が実施される。</p>
+<p><code>+ng</code>オプションに<code>&lt;fd&gt;</code>を指定すると、標準エラー出力のかわりに<code>&lt;fd&gt;</code>への出力が実施される。</p>
 <pre class="prettyprint">$ getfirst +ng4 1 2 data &gt; /dev/null 4&gt; data2
 $ cat data2
 0000007 セロリ 20060202 136
