--- a/MANUALHTML/haba.html
+++ b/MANUALHTML/haba.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -153,12 +152,12 @@ Edition : 1</pre>
 4
 8</pre>
 <h3>【例２】</h3>
-<p><code>-v</code> オプションで表示幅に変化のあった行番号と表示幅を出力します。</p>
+<p><code>-v</code>オプションで表示幅に変化のあった行番号と表示幅を出力します。</p>
 <pre class="prettyprint">$ hava -v data
 1 4                   &lt;--- １行目からは表示幅４
 4 8                   &lt;--- ４行目からは表示幅８</pre>
 <h3>【例３】</h3>
-<p><code>-f</code> オプションでファイル名もあわせて出力します。標準入力の場合は、ファイル名は STDIN となります。<code>-v</code> オプションと併用すると、ファイル名、行番号、表示幅の順になります。</p>
+<p><code>-f</code>オプションでファイル名もあわせて出力します。標準入力の場合は、ファイル名は STDIN となります。<code>-v</code>オプションと併用すると、ファイル名、行番号、表示幅の順になります。</p>
 <pre class="prettyprint">$ cat file1
 1234
 $ cat file2
