--- a/MANUALHTML/join1.html
+++ b/MANUALHTML/join1.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -143,7 +142,7 @@ Edition : 1</pre>
 <p>masterに<code>-</code>を指定すると標準入力をマスタファイルとする。tranが無指定かまたは<code>-</code>が指定されている場合には、標準入力がトランザクションファイルとなる。</p>
 <p>masterの第1フィールドおよびtranの第<code>&lt;n&gt;</code>フィールドは必ず昇順で整列されていることが条件となる。また、masterのキーフィールド(第1フィールド)はユニークでなければならない。(第1フィールドが同じ値をもつ行が複数あってはならない)。tranについてはこの制約はなく、キーフィールド(第<code>&lt;n&gt;</code>フィールド)が同じ値の行はいくつあっても構わない。</p>
 <p>キー指定にひとつでも0があると全フィールドを指定したことになる</p>
-<p><code>+ng</code><code>&lt;fd&gt;</code>オプションを使うことで、一致した行を標準出力ファイルへ、一致しなかった行をファイルデスクリプタ<code>&lt;fd&gt;</code>のファイルへ出力することが可能。<code>&lt;fd&gt;</code>を省略した場合は標準エラー出力へ出力する。</p>
+<p><code>+ng &lt;fd&gt;</code>オプションを使うことで、一致した行を標準出力ファイルへ、一致しなかった行をファイルデスクリプタ<code>&lt;fd&gt;</code>のファイルへ出力することが可能。<code>&lt;fd&gt;</code>を省略した場合は標準エラー出力へ出力する。</p>
 <p><code>tran</code>でキーが整列されていないものは<a href="join1.html" class="command">join1(1)</a>では処理できない。その場合は一旦tranを整列してから<a href="join1.html" class="command">join1(1)</a>で処理するか、<a href="join1.html" class="command">join1(1)</a>のかわりに<a href="cjoin1.html" class="command">cjoin1(1)</a>を使って処理すればよい。</p>
 <h3>【例1】基本パターン</h3>
 <p>経費ファイルkeihiからmasterに登録されている4人のデータを抽出し、マスタファイルの内容を連結する。</p>
