--- a/MANUALHTML/join2.html
+++ b/MANUALHTML/join2.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -209,7 +208,7 @@ $</pre>
 10 C 0000011 ********** ** * 92 56 83 96 75
 $</pre>
 <h3>【例3】</h3>
-<p>+<code>&lt;string&gt;</code>はダミーデータとして補完する文字を指定す<code>る</code>オプション。+の後に補完で使用する文字を指定する。</p>
+<p>+<code>&lt;string&gt;</code>はダミーデータとして補完する文字を指定するオプション。+の後に補完で使用する文字を指定する。</p>
 <pre class="prettyprint">$ cat master
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
