--- a/MANUALHTML/keycut.html
+++ b/MANUALHTML/keycut.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -187,7 +186,7 @@ $</pre>
 -rw-r--r-- 1 usp usp 91 2009-02-19 11:15 data.4
 $</pre>
 <h3>【例3】-aオプション使用例</h3>
-<p><code>-a</code>オプションを指定すると分割先ファイルは追記されるようになる。分割先ファイルがないときは新たに作成される。こ<code>の</code>オプションを指定しない場合にはファイルは上書きとなる。</p>
+<p><code>-a</code>オプションを指定すると分割先ファイルは追記されるようになる。分割先ファイルがないときは新たに作成される。このオプションを指定しない場合にはファイルは上書きとなる。</p>
 <pre class="prettyprint">$ keycut data.%1 data</pre>
 <pre class="prettyprint">$ keycut -a data.%1 data</pre>
 <pre class="prettyprint">$ ls -l data.*
