--- a/MANUALHTML/msort.html
+++ b/MANUALHTML/msort.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -139,7 +138,7 @@
 Version : Sun Aug 28 11:47:10 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p><code>key=&lt;key&gt;</code> にしたがって<code>&lt;file&gt;</code> のソートを行います。<code>&lt;key&gt;</code> として、フィールドの位置を指定できます。</p>
+<p><code>key=&lt;key&gt;</code>にしたがって<code>&lt;file&gt;</code>のソートを行います。<code>&lt;key&gt;</code>として、フィールドの位置を指定できます。</p>
 <pre style="margin-left: 3.5em;">
   msort key=2 file
   msort key=2/5 file
@@ -151,7 +150,7 @@ Edition : 1</pre>
   msort key=2n/5nr file      ×
   msort key=2n/5r  file      ×
 </pre>
-<p>ファイル名を指定しない、或は <code>-</code> を指定した場合、標準入力から読み込みます。</p>
+<p>ファイル名を指定しない、或は <code>-</code>を指定した場合、標準入力から読み込みます。</p>
     </div>
 
     <div id="lastmodified">Last modified: Sun Aug 28 11:49:10 JST 2022</div>
