--- a/MANUALHTML/rank.html
+++ b/MANUALHTML/rank.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -163,7 +162,7 @@ $</pre>
 8 USA TOM_______ 35
 $</pre>
 <h3>【例2】ref=指定</h3>
-<p><code>ref=&lt;ref&gt;</code>で参照フィールドを指定したときは、参照フィールドが変化した行で、階数を1に初期化する。<code>ref=1/2</code><code>ref=3@2/5</code> などの連続・不連続のフィールドを指定することも可能。</p>
+<p><code>ref=&lt;ref&gt;</code>で参照フィールドを指定したときは、参照フィールドが変化した行で、階数を1に初期化する。<code>ref=1/2 ref=3@2/5</code>などの連続・不連続のフィールドを指定することも可能。</p>
 <pre class="prettyprint">$ rank ref=1 data
 1 JPN 杉山______ 26
 2 JPN 崎村______ 27
