--- a/MANUALHTML/ratio.html
+++ b/MANUALHTML/ratio.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -216,7 +215,7 @@ d店 1日目   75 11.0   48
 e店 1日目  211 31.0  140
 $</pre>
 <h3>【例4】-&lt;s>オプション</h3>
-<p><code>-</code><code>&lt;数値&gt;</code>で構成比の小数点以下の精度を指定できる。</p>
+<p>-&lt;数値&gt;で構成比の小数点以下の精度を指定できる。</p>
 <pre class="prettyprint">$ cat data
 a店 1日目 103  62               ←店名 日付 売数 客数
 b店 1日目 210 113
