--- a/MANUALHTML/rjson.html
+++ b/MANUALHTML/rjson.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -139,9 +138,9 @@
 Version : Mon Sep 12 12:13:51 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
-<p>JSON 形式(RFC8259) のファイル<code>&lt;json-file&gt;</code> をフィールド形式にします。オブジェクト名とリスト位置がネストの順に出力され、最後に値が出力されます。</p>
+<p>JSON 形式(RFC8259) のファイル<code>&lt;json-file&gt;</code>をフィールド形式にします。オブジェクト名とリスト位置がネストの順に出力され、最後に値が出力されます。</p>
 <h3>【オプション】</h3>
-<p><code>-p</code> : オブジェクト名やリスト位置の区切りを変更します。デフォルトは半角空白です。<code>-m</code> : オブジェクト名に含まれる半角空白を変更します。デフォルトは<code>&quot;_&quot;</code> です。<code>-s</code> : 値に含まれる半角空白を変更します。デフォルトは<code>&quot;_&quot;</code> です。<code>-n</code> : ヌル値(空文字列)を変更します。デフォルトは<code>&quot;_&quot;</code> です。</p>
+<p><code>-p</code>: オブジェクト名やリスト位置の区切りを変更します。デフォルトは半角空白です。<code>-m</code>: オブジェクト名に含まれる半角空白を変更します。デフォルトは<code>&quot;_&quot;</code>です。<code>-s</code>: 値に含まれる半角空白を変更します。デフォルトは<code>&quot;_&quot;</code>です。<code>-n</code>: ヌル値(空文字列)を変更します。デフォルトは<code>&quot;_&quot;</code>です。</p>
 <h3>【例１】</h3>
 <pre class="prettyprint">$ cat jsondata
 {
