--- a/MANUALHTML/tcat.html
+++ b/MANUALHTML/tcat.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -160,7 +159,7 @@ $</pre>
 0000011 安武______   55    F 92 56 83 96 75
 $</pre>
 <h3>【例2】</h3>
-<p><code>-&lt;n&gt;</code>オプションを使用すると、ファイルを<code>&lt;n&gt;</code><code>-</code>で指定した行数分だけ間をあけて連結することができる。</p>
+<p><code>-&lt;n&gt;</code>オプションを使用すると、ファイルを<code>&lt;n&gt; -</code>で指定した行数分だけ間をあけて連結することができる。</p>
 <p>2行あけて連結するには次のようにコマンドを実行する。</p>
 <pre class="prettyprint">$ tcat -2 file1 file2
 ---試験結果---
