--- a/MANUALHTML/uconv.html
+++ b/MANUALHTML/uconv.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -149,7 +148,7 @@ Edition : 1</pre>
 <li><code>-ltou</code>: <code>ISO-8851-1</code> から <code>UTF-8</code></li>
 <li><code>-utol</code>: <code>UTF-8</code> から <code>ISO-8851-1</code></li>
 </ul>
-<p>ファイル名が省略された時及び<code>&quot;-&quot;</code> の時は標準入力から入力します。</p>
+<p>ファイル名が省略された時及び<code>&quot;-&quot;</code>の時は標準入力から入力します。</p>
     </div>
 
     <div id="lastmodified">Last modified: Sun Aug 28 13:25:04 JST 2022</div>
