--- a/MANUALHTML/xmldir.html
+++ b/MANUALHTML/xmldir.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -141,9 +140,9 @@ Version : Sun Aug 28 11:35:26 JST 2022
 Edition : 1</pre>
 <h3>【説明】</h3>
 <p>ディレクトリタグの絶対パスを指定して、絶対パスとすべてのサブツリーの項目、属性、値を出力します。出力は末端のファイルパスに対して１行出力されます。</p>
-<p><code>-c</code> オプションで、指定パスのインデックスが出力されます。<code>-s</code> オプションで設定した文字が空白の代わりに出力されます。</p>
+<p><code>-c</code>オプションで、指定パスのインデックスが出力されます。<code>-s</code>オプションで設定した文字が空白の代わりに出力されます。</p>
 <p>N 階層のパスの場合、インデックスは N 個となり、タグが繰り返されるとインデックスはインクリメントされます。上位のタグがインクリメントされた場合、下位のタグのインデックスは１にリセットされます。</p>
-<p><code>-c</code><code>&lt;n&gt;</code> の場合、インデックスは前０埋め<code>&lt;n&gt;</code> 桁の数字になります。</p>
+<p><code>-c &lt;n&gt;</code>の場合、インデックスは前０埋め<code>&lt;n&gt;</code>桁の数字になります。</p>
 <h3>【例１】 単純な例</h3>
 <pre class="prettyprint">$ cat xml
 &lt;dir1&gt;
