--- a/MANUALHTML/yarr.html
+++ b/MANUALHTML/yarr.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -191,7 +190,7 @@ $</pre>
 1 2 3 4
 $</pre>
 <h3>【例4】</h3>
-<p><code>-d</code><code>&lt;str&gt;</code> オプションは横展開するときのフィールドセパレータを指定する。</p>
+<p><code>-d &lt;str&gt;</code>オプションは横展開するときのフィールドセパレータを指定する。</p>
 <pre class="prettyprint">$ yarr -d@ num=4 data &gt; data2
 $ cat data2
 0000000 浜地______ 50 F 91@59@20@76
