--- a/MANUALHTML/zen.html
+++ b/MANUALHTML/zen.html
@@ -56,6 +56,7 @@
               <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="fromcsv.html">fromcsv(1)</a></li>
               <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
@@ -111,9 +112,7 @@
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li></li>
-
-              <li class="separator"><hr></li>
+                            <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
@@ -161,7 +160,7 @@ $ cat data | zen
 １　２　３
 $</pre>
 <h3>【例3】</h3>
-<p><code>zen</code><code>-k &lt;file&gt;</code>の場合、<code>&lt;file&gt;</code>の半角カタカナだけ全角にする。メールの表題や本文には半角カナは使えないため、このフィルタを使用して前処理を実施する。</p>
+<p><code>zen -k &lt;file&gt;</code>の場合、<code>&lt;file&gt;</code>の半角カタカナだけ全角にする。メールの表題や本文には半角カナは使えないため、このフィルタを使用して前処理を実施する。</p>
 <pre class="prettyprint">$ cat data2
 123ｱｲｳｴｵ
 $ cat data2 | zen -k
